fixed footer spacing

--- a/des157-wi20/studio1/styles.css
+++ b/des157-wi20/studio1/styles.css
@@ -42,7 +42,7 @@ h1{
 }
 
 footer {
-  margin-top:50px;
+  margin-top:200px;
   text-align: center;
 }
 
